ランキング制作

--- a/html/home.html
+++ b/html/home.html
@@ -12,7 +12,9 @@
 <body>
     <nav class="navbar navbar-expand-md">
         <div class="container">
-            <a class="navbar-brand" href="#">ロゴ</a>
+            <a class="navbar-brand" href="#">
+                <img src="../img/logo.jpg">
+            </a>
             <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -104,6 +106,9 @@
     </section>
 
     <section class=" mt-5 top002">
+        <video class="bg-video" autoplay loop muted playsinline>
+            <source src="../img/background2.mp4" type="video/mp4">
+        </video>
         <div class="container">
             <h2 class="section-title mb-4">天珠</h2>
     
@@ -138,11 +143,107 @@
         </div>
     </section>
 
+    <section class="mt-5 top003">
+        <div class="container">
+            <h2 class="section-title mb-3">ランキング</h2>
+            <div id="carousel-ranking" class="carousel slide">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="row">
+                            <div class="col-3">
+                                <span class="ranking">人気 No1</span>
+                                <div class="card">
+                                    <img src="https://placehold.jp/167x167.png" class="card-img-top">
+                                    <div class="card-body">
+                                        <h5 class="product-name">商品名</h5>
+                                        <p class="price">¥1,500(税込)</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-3">
+                                <span class="ranking">人気 No2</span>
+                                <div class="card">
+                                    <img src="https://placehold.jp/167x167.png" class="card-img-top">
+                                    <div class="card-body">
+                                        <h5 class="product-name">商品名</h5>
+                                        <p class="price">¥1,500(税込)</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-3">
+                                <span class="ranking">人気 No3</span>
+                                <div class="card">
+                                    <img src="https://placehold.jp/167x167.png" class="card-img-top">
+                                    <div class="card-body">
+                                        <h5 class="product-name">商品名</h5>
+                                        <p class="price">¥1,500(税込)</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-3">
+                                <div class="card key">
+                                    <img src="https://placehold.jp/167x167.png" class="card-img-top">
+                                    <div class="card-body">
+                                        <h5 class="product-name">商品名</h5>
+                                        <p class="price">¥1,500(税込)</p>
+                                    </div>
+                                </div>
+                            </div>  
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row">
+                            <div class="col-3">
+                                <div class="card key">
+                                    <img src="https://placehold.jp/167x167.png" class="card-img-top">
+                                    <div class="card-body">
+                                        <h5 class="product-name">商品名</h5>
+                                        <p class="price">¥1,500(税込)</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-3">
+                                <div class="card key">
+                                    <img src="https://placehold.jp/167x167.png" class="card-img-top">
+                                    <div class="card-body">
+                                        <h5 class="product-name">商品名</h5>
+                                        <p class="price">¥1,500(税込)</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-3">
+                                <div class="card key">
+                                    <img src="https://placehold.jp/167x167.png" class="card-img-top">
+                                    <div class="card-body">
+                                        <h5 class="product-name">商品名</h5>
+                                        <p class="price">¥1,500(税込)</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-3">
+                                <div class="card key">
+                                    <img src="https://placehold.jp/167x167.png" class="card-img-top">
+                                    <div class="card-body">
+                                        <h5 class="product-name">商品名</h5>
+                                        <p class="price">¥1,500(税込)</p>
+                                    </div>
+                                </div>
+                            </div>  
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-next" type="button" data-bs-target="#carousel-ranking" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                </button>
+            </div>
+        </div>
+    </section>
+
     <div class="mt-5 fortune-telling">
-        <a href="https://yuimizu.github.io/random/index.html" target="_blank">天珠を占う</a>
+        <a href="https://yuimizu.github.io/random/index.html" target="_blank">天珠占い</a>
     </div>
 
-    <section class="mt-5 top003">
+    <section class="mt-5 top004">
         <div class="container">
             <h2 class="section-title mb-3">ギャラリー</h2>
             <div id="Carousel" class="carousel slide mt-5">
@@ -280,7 +381,7 @@
         </div>
         
         <a href="" target="_blank">
-            <div class="top003Go mt-4">
+            <div class="top004Go mt-4">
                 <i class="bi bi-cart-dash fs-2"></i>
                 <span class="swfText">ONLINE SHOP</span>
                 <div>公式オンラインショップ</div>
@@ -292,7 +393,9 @@
         <div class="container">
             <div class="d-flex justify-content-between">
                 <div class="footerLogo">
-                    <a href="">ロゴ</a>
+                    <a href="">
+                        <img src="../img/logo.jpg">
+                    </a>
                 </div>
                 <div class="footerSnsBox">
                     <div class="footerSns">
