眼人の制作（1～5）

--- a/html/home.html
+++ b/html/home.html
@@ -24,10 +24,13 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav mx-auto"> 
                     <li class="nav-item">
+                        <a class="nav-link" href="home.html">ホーム</a>
+                    </li> 
+                    <li class="nav-item">
                         <a class="nav-link" href="tenju.html">天珠について</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">眼人とは</a>
+                        <a class="nav-link" href="ganjin.html">眼人とは</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="">お知らせ</a>
@@ -276,7 +279,7 @@
     </div>
 
     <div class="mt-5 fortune-telling">
-        <a href="https://yuimizu.github.io/random/index.html" target="_blank">天珠占い</a>
+        <a href="fortune.html" target="_blank">天珠占い</a>
     </div>
 
     <section class="mt-5 top004">
