--- a/html/tenju.html
+++ b/html/tenju.html
@@ -23,12 +23,15 @@
             </button>
     
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav mx-auto"> 
+                <ul class="navbar-nav mx-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="home.html">ホーム</a>
+                    </li> 
                     <li class="nav-item">
                         <a class="nav-link" href="tenju.html">天珠について</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">眼人とは</a>
+                        <a class="nav-link" href="ganjin.html">眼人とは</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="">お知らせ</a>
@@ -81,6 +84,12 @@
     </script>
 
     <div class="container">
+        <div class="summary mt-2">
+            <div class="title">■天珠とは</div>
+            <p>天珠は、古代からチベットを中心としたヒマラヤ地域で神聖視されてきたビーズ状の石です。<br>その起源は2000年から3000年前、古代インドや西アジアのメソポタミア文明に由来するという説がありますが、未だ解明されていない謎多き存在です。<br>主に瑪瑙（めのう）を素材とし、特殊な加工を施すことで、吉祥文様と呼ばれる縁起の良い模様が浮かび上がります。</p>
+            <p>天珠には数々の伝説や言い伝えがあり、神々が地上に降りた際に落とした「神の」であるとか、龍が落とした鱗が変化したものである、特殊な虫の化石であるなど、神秘的な物語が数多く語り継がれています。<br>これらの伝説は、天珠が単なる装飾品ではなく、特別な力を持つ神聖な存在として崇められてきたことを物語っています。</p>
+            <p>その神秘的な美しさと力強い伝説から、天珠は古来より人々の心を惹きつけ、大切にされてきました。<br>現代においても、天珠は単なるアクセサリーとしてだけでなく、お守りやパワーストーンとして、多くの人々に愛されています。</p>
+        </div>
         <div class="accordion mt-5 mb-4" id="accordionTenju">
             <div class="accordion-item">
                 <div class="accordion-header">
