--- a/html/question.html
+++ b/html/question.html
@@ -25,10 +25,13 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav mx-auto"> 
                     <li class="nav-item">
+                        <a class="nav-link" href="home.html">ホーム</a>
+                    </li> 
+                    <li class="nav-item">
                         <a class="nav-link" href="tenju.html">天珠について</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">眼人とは</a>
+                        <a class="nav-link" href="ganjin.html">眼人とは</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="">お知らせ</a>
