眼人の制作（残り）

--- a/html/home.html
+++ b/html/home.html
@@ -83,7 +83,7 @@
     </script>
     
     <div class="swf">
-        <div id="carouselIndicators" class="carousel slide">
+        <div id="carouselIndicators" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -116,7 +116,7 @@
         </a>       
     </div>
     
-    <section class="mt-5 top001">
+    <section class="top001">
         <div class="container">
             <div class="row align-items-center">
                 <!-- 左側の画像 -->
@@ -134,7 +134,7 @@
                             その力は持ち主の潜在能力を引き出し、願いを叶え、<br>
                             人生をより良い方向へと導くと信じられています。
                         </p>
-                        <a href="" class="more mt-3">● MORE</a>
+                        <a href="tenju.html" class="more mt-3">● MORE</a>
                     </div>
                 </div>
             </div>
