細かい変更点

--- a/html/result.html
+++ b/html/result.html
@@ -50,8 +50,8 @@
                     <img src="../img/LINE.png" class="sns-icon">
                 </a>
                 <a href="#">
-                  <img src="../img/mercari.png" class="sns-icon">
-                </a>
+                  <img src="../img/mercari.png" style="width: 60px; margin-left: -5px;"  class="sns-icon">
+              </a> 
               </li>
             </ul>
           </div>
