--- a/html/ganjin.html
+++ b/html/ganjin.html
@@ -47,7 +47,6 @@
                     </li>
                 </ul>
                 <div class="sns-link mt-2">
-                    <span>SNS</span>
                     <a href="#">
                         <img src="../img/Instagram.png" class="sns-icon">
                     </a>
@@ -58,8 +57,8 @@
                         <img src="../img/LINE.png" class="sns-icon">
                     </a>
                     <a href="#">
-                        <img src="../img/mercari.png" class="sns-icon">
-                    </a>
+                        <img src="../img/mercari.png" style="width: 60px; margin-left: -5px;"  class="sns-icon">
+                    </a> 
                 </div>
             </div>  
         </nav>
@@ -2993,6 +2992,17 @@
                 element.innerHTML = formatTextForHTML(element.innerHTML);
             });
         };
+    </script>
+
+    <script>
+        document.querySelectorAll('.accordion-button').forEach(button => {
+        button.addEventListener('click', function() {
+                setTimeout(() => {
+                    const rect = this.getBoundingClientRect();
+                    window.scrollTo({ top: window.scrollY + rect.top - 200, behavior: 'smooth' });
+                }, 300); 
+            });
+        });
     </script>
     
     <footer class="pb-3">
