--- a/html/home.html
+++ b/html/home.html
@@ -46,7 +46,6 @@
                     </li>
                 </ul>
                 <div class="sns-link mt-2">
-                    <span>SNS</span>
                     <a href="#">
                         <img src="../img/Instagram.png" class="sns-icon">
                     </a>
@@ -57,8 +56,8 @@
                         <img src="../img/LINE.png" class="sns-icon">
                     </a>
                     <a href="#">
-                        <img src="../img/mercari.png" class="sns-icon">
-                    </a>
+                        <img src="../img/mercari.png" style="width: 60px; margin-left: -5px;"  class="sns-icon">
+                    </a> 
                 </div>
             </div>  
         </nav>
