細かい変更点

--- a/html/home.html
+++ b/html/home.html
@@ -443,7 +443,7 @@
                     <img src="../img/LINE.png" class="sns-icon">
                 </a>
                 <a href="#">
-                    <img src="../img/mercari.png" class="sns-icon">
+                    <img src="../img/mercari.png" style="width: 60px; margin-left: -5px;" class="sns-icon">
                 </a>
             </div>
         </div>  
