--- a/html/question.html
+++ b/html/question.html
@@ -150,8 +150,6 @@
                             2.原石の加工：厳選された瑪瑙の原石は、まず天珠の形状に切断され、研磨によって表面が滑らかにされ、穴あけによって紐を通すための穴が開けられます。
                             3.模様付け：天珠の模様は、染色や腐食といった技法を用いて描かれます。染色の場合は、特殊な染料を用いて天珠の表面に模様を描き、高温で焼き付けることで染料を定着させます。腐食の場合は、薬品を使って天珠の表面を腐食させ、模様を浮かび上がらせます。模様の種類や技法は、工房によって異なり、それぞれ独自のノウハウが用いられています。
                             4.仕上げ：模様付けが終わった天珠は、再度研磨によって表面が滑らかにされ、光沢が出されます。また、天珠の表面を保護するために、コーティングを施すこともあります。
-                            ★ジャパンストーングループの代表が、天珠工房に招待され、日本人で初めて至純天珠を作った貴重な写真はこちら→<br>
-                            ※これから先の写真や文章は、代表の持論や意見を掲載しておりますので、物事に対して批判的な同業者及び読者の方は、これから先の閲覧をお控えください。
                         </p>
                     </div>
                 </div>
@@ -419,7 +417,7 @@
                     <img src="../img/LINE.png" class="sns-icon">
                 </a>
                 <a href="#">
-                    <img src="../img/mercari.png" class="sns-icon">
+                    <img src="../img/mercari.png" style="width: 60px; margin-left: -5px;" class="sns-icon">
                 </a>
             </div>
         </div>  
