--- a/html/ganjin.html
+++ b/html/ganjin.html
@@ -3018,7 +3018,7 @@
                     <img src="../img/LINE.png" class="sns-icon">
                 </a>
                 <a href="#">
-                    <img src="../img/mercari.png" class="sns-icon">
+                    <img src="../img/mercari.png" style="width: 65px; margin-left: -5px;" class="sns-icon">
                 </a>
             </div>
         </div>  
